[MYTUNESRSS-352] Use VLC for transcoding and http live streaming
git-svn-id: svn://127.0.0.1/mytunesrss/trunk@7157 6cd82e91-2702-0410-863d-86aa3370aca5